build/log/idf_py_stdout_output_1417809
[1/10] Linking C static library esp-idf/esp_video/libesp_video.a
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/bjorn/projects/p4_mqtt_cam/build/bootloader/esp-idf/esptool_py && /home/bjorn/.espressif/python_env/idf5.4_py3.10_env/bin/python /home/bjorn/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /home/bjorn/projects/p4_mqtt_cam/build/bootloader/bootloader.bin
Bootloader binary size 0x5870 bytes. 0x790 bytes (8%) free.
[3/10] No install step for 'bootloader'
[4/10] Completed 'bootloader'
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/flash_uploader.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/flash_uploader.c.obj 
/home/bjorn/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20250730/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.3-544-ge6cad886e8\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/bjorn/projects/p4_mqtt_cam/build/config -I/home/bjorn/projects/p4_mqtt_cam/main -I/home/bjorn/esp/esp-idf/components/newlib/platform_include -I/home/bjorn/esp/esp-idf/components/freertos/config/include -I/home/bjorn/esp/esp-idf/components/freertos/config/include/freertos -I/home/bjorn/esp/esp-idf/components/freertos/config/riscv/include -I/home/bjorn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/bjorn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/bjorn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/bjorn/esp/esp-idf/components/freertos/esp_additions/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/include/soc -I/home/bjorn/esp/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/home/bjorn/esp/esp-idf/components/esp_hw_support/dma/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/port/esp32p4/. -I/home/bjorn/esp/esp-idf/components/esp_hw_support/port/esp32p4/include -I/home/bjorn/esp/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/home/bjorn/esp/esp-idf/components/heap/include -I/home/bjorn/esp/esp-idf/components/heap/tlsf -I/home/bjorn/esp/esp-idf/components/log/include -I/home/bjorn/esp/esp-idf/components/soc/include -I/home/bjorn/esp/esp-idf/components/soc/esp32p4 -I/home/bjorn/esp/esp-idf/components/soc/esp32p4/include -I/home/bjorn/esp/esp-idf/components/soc/esp32p4/register/hw_ver1 -I/home/bjorn/esp/esp-idf/components/hal/platform_port/include -I/home/bjorn/esp/esp-idf/components/hal/esp32p4/include -I/home/bjorn/esp/esp-idf/components/hal/include -I/home/bjorn/esp/esp-idf/components/esp_rom/include -I/home/bjorn/esp/esp-idf/components/esp_rom/esp32p4/include -I/home/bjorn/esp/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/home/bjorn/esp/esp-idf/components/esp_rom/esp32p4 -I/home/bjorn/esp/esp-idf/components/esp_common/include -I/home/bjorn/esp/esp-idf/components/esp_system/include -I/home/bjorn/esp/esp-idf/components/esp_system/port/soc -I/home/bjorn/esp/esp-idf/components/esp_system/port/include/riscv -I/home/bjorn/esp/esp-idf/components/esp_system/port/include/private -I/home/bjorn/esp/esp-idf/components/riscv/include -I/home/bjorn/esp/esp-idf/components/lwip/include -I/home/bjorn/esp/esp-idf/components/lwip/include/apps -I/home/bjorn/esp/esp-idf/components/lwip/include/apps/sntp -I/home/bjorn/esp/esp-idf/components/lwip/lwip/src/include -I/home/bjorn/esp/esp-idf/components/lwip/port/include -I/home/bjorn/esp/esp-idf/components/lwip/port/freertos/include -I/home/bjorn/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/bjorn/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/bjorn/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/bjorn/esp/esp-idf/components/esp_event/include -I/home/bjorn/esp/esp-idf/components/esp_eth/include -I/home/bjorn/esp/esp-idf/components/esp_driver_spi/include -I/home/bjorn/esp/esp-idf/components/esp_pm/include -I/home/bjorn/esp/esp-idf/components/esp_netif/include -I/home/bjorn/esp/esp-idf/components/esp_wifi/include -I/home/bjorn/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/bjorn/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/bjorn/esp/esp-idf/components/tcp_transport/include -I/home/bjorn/esp/esp-idf/components/esp-tls -I/home/bjorn/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/bjorn/esp/esp-idf/components/mbedtls/port/include -I/home/bjorn/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/bjorn/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/bjorn/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/bjorn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/bjorn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/bjorn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/bjorn/esp/esp-idf/components/esp_timer/include -I/home/bjorn/esp/esp-idf/components/nvs_flash/include -I/home/bjorn/esp/esp-idf/components/esp_partition/include -I/home/bjorn/esp/esp-idf/components/esp_driver_jpeg/include -I/home/bjorn/esp/esp-idf/components/spiffs/include -I/home/bjorn/esp/esp-video-components/esp_video/include -I/home/bjorn/esp/esp-idf/components/esp_driver_cam/include -I/home/bjorn/esp/esp-idf/components/esp_driver_cam/interface -I/home/bjorn/esp/esp-idf/components/esp_driver_cam/csi/include -I/home/bjorn/esp/esp-idf/components/esp_driver_cam/isp_dvp/include -I/home/bjorn/esp/esp-idf/components/esp_driver_cam/dvp/include -I/home/bjorn/esp/esp-idf/components/esp_driver_isp/include -I/home/bjorn/esp/esp-idf/components/esp_mm/include -I/home/bjorn/esp/esp-video-components/esp_cam_sensor/include -I/home/bjorn/esp/esp-video-components/esp_cam_sensor/sensors/sc2336/include -I/home/bjorn/esp/esp-video-components/esp_sccb_intf/include -I/home/bjorn/esp/esp-video-components/esp_sccb_intf/interface -I/home/bjorn/esp/esp-video-components/esp_sccb_intf/sccb_i2c/include -I/home/bjorn/esp/esp-idf/components/esp_driver_i2c/include -I/home/bjorn/esp/esp-idf/components/esp_driver_gpio/include -I/home/bjorn/esp/esp-idf/components/esp_driver_ledc/include -I/home/bjorn/esp/esp-idf/components/esp_driver_parlio/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/bjorn/projects/p4_mqtt_cam=. -fmacro-prefix-map=/home/bjorn/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/flash_uploader.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/flash_uploader.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/flash_uploader.c.obj -c /home/bjorn/projects/p4_mqtt_cam/main/flash_uploader.c
/home/bjorn/projects/p4_mqtt_cam/main/flash_uploader.c: In function 'uploader_task':
/home/bjorn/projects/p4_mqtt_cam/main/flash_uploader.c:187:46: error: '%s' directive output may be truncated writing up to 255 bytes into a region of size 248 [-Werror=format-truncation=]
  187 |             snprintf(path, sizeof(path), "%s/%s", CONFIG_P4_FLASH_MOUNT_PATH, ent->d_name);
      |                                              ^~
/home/bjorn/projects/p4_mqtt_cam/main/flash_uploader.c:187:13: note: 'snprintf' output between 9 and 264 bytes into a destination of size 256
  187 |             snprintf(path, sizeof(path), "%s/%s", CONFIG_P4_FLASH_MOUNT_PATH, ent->d_name);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
